force-app/main/default/objects/Review__c/fields/Candidate_Link__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Job_Application__r.Candidate__r.Id,  Job_Application__r.Candidate__r.First_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Link</label>
    <type>Text</type>
</CustomField>