force-app/main/default/objects/Review__c/fields/Position_Link__c.field-meta.xml
<CustomField>
    <fullName>Position_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Job_Application__r.Position__r.Id , Job_Application__r.Position__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Link</label>
    <type>Text</type>
</CustomField>