force-app/main/default/objects/Review__c/validationRules/Rating_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &lt; 1 || Rating__c &gt;5</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>